<resources>
    <string name="app_name">TeenCash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="subtitle_onboarding1">Manage your spendings with TeenCash!</string>
    <string name="limits">Limits</string>
    <string name="subtitle_onboarding2">Spend money wisely using limitation</string>
    <string name="save_money">Save money</string>
    <string name="subtitle_onboarding3">Set the goal and save up money</string>
    <string name="next_onboarding3">Get started!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="authorization">Authorization</string>
    <string name="fill_in_the_field">Fill in the fields</string>
    <string name="password_characters">The password needs to have 6 characters or more</string>
    <string name="not_valid_email">The email address you entered is not valid.</string>
    <string name="not_authorized_email">The email address you entered is not authorized.</string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="verify_your_email_subtitle">We have sent an email to you\n\nClick the link on your email within
        5 minutes to validate your address and continue.\nIf you have not received the verification email, please check your "Spam"
        or "Bulk Email" folder.</string>
    <string name="resend_verification_email">Resend verification Email</string>
    <string name="verify_account">Account has not been verified yet. Please check your email.</string>
    <string name="login_failed">Your password is incorrect or this account does not exist.
        Please reset your password or create new account.</string>
    <string name="registration_failed">Registration failed :( Please try again later..</string>
    <string name="verification_failed">Verification failed :( Please try again later..</string>
    <string name="password_reset_email">We have sent you instructions on how to reset your password.
        If you have not received the verification email, please check your "Spam"
        or "Bulk Email" folder.</string>
    <string name="ok">OK</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="total">Total</string>
    <string name="balance">balance</string>
    <string name="kgs">KGS</string>
    <string name="spent">Spent</string>
    <string name="today">today</string>
    <string name="limit">Limit</string>
    <string name="saved">Saved</string>
    <string name="spendings">Spendings</string>
    <string name="piggy_banks">Piggy banks</string>
    <string name="add">Add</string>
    <string name="transport">Transport</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="goal">Goal</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="change_language">Language</string>
    <string name="change_currency">Currency</string>
    <string name="my_achievements">My achievements</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="sign_out">Sign out</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="item_exists">Item with such name already exists</string>
    <string name="check_all_data">Check all data</string>
    <string name="delete_category">Delete Category</string>
    <string name="are_u_sure_delete">Are you sure you want to permanently remove this item?</string>
    <string name="yes">Yes</string>
    <string name="delete_piggy">Delete Piggy Bank</string>
    <string name="limit_per_day">Limit per day</string>
    <string name="Balance">Balance</string>
    <string name="loan_journal">Loan Journal</string>
    <string name="add_person">Add person</string>
    <string name="achieved">Achieved</string>
    <string name="delete_achievement">Delete Achievement</string>
    <string name="kyrgyz">Kyrgyz</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="kyrgyz_or">Кыргызча</string>
    <string name="russian_or">Русский</string>
    <string name="english_or">English</string>
    <string name="select_lang">Select language</string>
    <string name="do_you_have_any_questions">Do You Have Any Questions ?</string>
    <string name="text_me_at">Text me at emikoomi13@gmail.com</string>
    <string name="text">Text</string>
    <string name="send_email_to_developer">Send email to developer</string>
    <string name="retry">Retry</string>
    <string name="set_image">Set image</string>
    <string name="borrowers">Borrowers</string>
    <string name="moneylenders">Moneylenders</string>
    <string name="history">History</string>
    <string name="your_goal">Your goal</string>
    <string name="your_daily_limit">Your Daily Limit</string>
    <string name="name">Name</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="select_currency">Select currency for balance and daily limit</string>
    <string name="kyrgyz_som">Kyrgyzstani Som</string>
    <string name="usa_dollar">US Dollar</string>
    <string name="european_euro">Euro</string>
    <string name="attention">Attention!</string>
    <string name="info_changing_currency">when changing currencies or using several currencies
        at the same time, the data may be inaccurate because auto-conversion is used</string>
    <string name="continue_">Continue</string>
    <string name="now_log_in">Success ! Now you can lon into your account..</string>
    <string name="income">Earnings</string>
    <string name="set_source">Source of income</string>
    <string name="job">Job</string>
    <string name="delete_account">Delete account</string>
    <string name="lose_data">After deletion you\'re gonna lose all the data</string>
    <string name="btn_continue">Continue</string>
    <string name="sun_icon">Sun icon</string>
    <string name="globus">Globus</string>
    <string name="an_arrow">An arrow</string>
    <string name="coin">Coin</string>
    <string name="trophy">Trophy</string>
    <string name="chat">Chat</string>
    <string name="trash_bin">Trash bin</string>

    <string-array name="spinner_date">
        <item name="choose">all</item>
        <item name="today">today</item>
        <item name="week">week</item>
        <item name="month">month</item>
    </string-array>

    <string-array name="spinner_currency">
        <item name="eur">EUR</item>
        <item name="usd">USD</item>
        <item name="kgs">KGS</item>
    </string-array>
</resources>