<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/FragmentScreen"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/verify_your_email"
        android:textSize="@dimen/sp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:textColor="@color/grey80"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        tools:text="@string/subtitle_onboarding3"
        android:textColor="@color/grey80"
        android:fontFamily="@font/poppins_semibold"/>

    <Button
        android:id="@+id/button_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_10"
        tools:text="@string/resend_verification_email"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:layout_gravity="end"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blue7584A3"
        android:padding="@dimen/dp_4"/>
</LinearLayout>