<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@drawable/ic_line_grey58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_40"
        style="@style/title_18sp_montserratBold_black030f28"
        android:text="@string/do_you_have_any_questions"
        android:layout_marginStart="@dimen/dp_16"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_8"
        style="@style/title_18sp_poppinsMedium_black030f28"
        android:text="@string/text_me_at"
        android:layout_marginStart="@dimen/dp_16"/>

    <Button
        android:id="@+id/btn_text"
        style="@style/button_solid"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_24"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/text"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/subtitle"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/black030f28_to_whitef9"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>