<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_fragment"
    android:background="@color/white_to_black030f28"
    tools:context=".presentation.ui.fragments.main.settings.SettingsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        style="@style/title_14sp_poppinsBold_black030f28"
        android:text="@string/settings"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/theme_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_field"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/title">

        <ImageView
            android:id="@+id/iv_mode"
            android:contentDescription="@string/sun_icon"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/ic_light_mode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_mode"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/theme"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MyBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_field"
        app:layout_constraintTop_toBottomOf="@id/theme_container"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_16">

        <ImageView
            android:id="@+id/iv_lang"
            android:contentDescription="@string/globus"
            android:background="@drawable/ic_lang"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_lang"
            app:layout_constraintBottom_toBottomOf="@id/iv_lang"
            app:layout_constraintStart_toEndOf="@id/iv_lang"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/change_language"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/an_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_lang"
            app:layout_constraintBottom_toBottomOf="@id/iv_lang"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_right"/>

        <Button
            android:id="@+id/btn_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/line1"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/iv_lang"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/blue7584A3"/>

        <ImageView
            android:id="@+id/iv_currency"
            android:background="@drawable/ic_currency"
            android:contentDescription="@string/coin"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_currency"
            app:layout_constraintBottom_toBottomOf="@id/iv_currency"
            app:layout_constraintStart_toEndOf="@id/iv_currency"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/change_currency"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/an_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_currency"
            app:layout_constraintBottom_toBottomOf="@id/iv_currency"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_right"/>

        <Button
            android:id="@+id/btn_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintBottom_toTopOf="@id/line2"/>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/iv_currency"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/blue7584A3"/>

        <ImageView
            android:id="@+id/iv_achievements"
            android:contentDescription="@string/trophy"
            android:background="@drawable/ic_achievements"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_achievements"
            app:layout_constraintBottom_toBottomOf="@id/iv_achievements"
            app:layout_constraintStart_toEndOf="@id/iv_achievements"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/my_achievements"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/an_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_achievements"
            app:layout_constraintBottom_toBottomOf="@id/iv_achievements"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_right"/>

        <Button
            android:id="@+id/btn_achievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@id/line2"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedback_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_field"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/settings_container">

        <ImageView
            android:id="@+id/iv_ask"
            android:background="@drawable/ic_ask"
            android:contentDescription="@string/chat"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_ask"
            app:layout_constraintBottom_toBottomOf="@id/iv_ask"
            app:layout_constraintStart_toEndOf="@id/iv_ask"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/ask_a_question"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/an_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_ask"
            app:layout_constraintBottom_toBottomOf="@id/iv_ask"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_right"/>

        <Button
            android:id="@+id/btn_ask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/iv_ask"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/blue7584A3"/>

        <ImageView
            android:id="@+id/iv_delete"
            android:background="@drawable/ic_delete"
            android:contentDescription="@string/trash_bin"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintTop_toTopOf="@id/btn_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_delete"
            android:layout_marginStart="@dimen/dp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_delete"
            app:layout_constraintBottom_toBottomOf="@id/iv_delete"
            app:layout_constraintStart_toEndOf="@id/iv_delete"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/delete_account"
            style="@style/title_16sp_poppinsMedium_black030f28"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/an_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_delete"
            app:layout_constraintBottom_toBottomOf="@id/iv_delete"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ic_right"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/sign_out"
        style="@style/title_14sp_poppinsMedium_blue031952"/>

</androidx.constraintlayout.widget.ConstraintLayout>